# involvexr-dialog-regression-harness

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
docs/: README.md  csharp_equivalents.md  glossary.md  integration_with_lumeto_stack.md  specflow_mapping.md  testing_philosophy.md
docs/adr/: ADR-001-semantic-vs-string-assertions.md  ADR-002-consensus-voting-for-flake-handling.md  ADR-003-mock-by-default-llm-client.md  ADR-004-scenario-yaml-vs-gherkin.md  ADR-005-python-prototype-vs-csharp-production.md
dotnet/: .gitignore  DialogHarness.sln  README.md
dotnet/src/DialogHarness.Api/: DialogHarness.Api.csproj  Program.cs  appsettings.json
examples/: run_demo.py
python/: DECISIONS.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  start.sh
python/examples/: run_demo.py
python/reports/: regression_20260501T115432Z.html
python/scenarios/: breaking_bad_news.yaml  code_blue_pediatric.yaml
python/src/dialog_harness/: __init__.py  assertions.py  consensus.py  coverage.py  embeddings.py  mock_llm.py  real_llm.py  report.py  runner.py  scenario.py
python/src/dialog_harness_api/: __init__.py  main.py
python/tests/: conftest.py  test_api.py  test_assertions.py  test_consensus.py  test_coverage.py  test_real_llm.py  test_runner_e2e.py  test_scenario.py
scenarios/: difficult_airway.yaml
src/dialog_harness/: __init__.py  mock_llm.py  report.py
tests/: test_runner_e2e.py
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: arch-diagram.tsx  consensus-visual.tsx  coverage-donut.tsx  latency-histogram.tsx  live-run-stream.tsx  nav-sidebar.tsx  present-live-run.tsx  present-sidebar.tsx  probe-result-row.tsx  scenario-card.tsx  theme-provider.tsx  theme-toggle.tsx  top-bar.tsx  yaml-block.tsx
web/lib/: api.ts  docs.ts  mock-data.ts  types.ts  utils.ts  yaml.ts
(+62 files in other folders)
