[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dialog-harness"
version = "0.1.0"
description = "Sketch of a regression harness for non-deterministic LLM-driven patient dialog in healthcare simulation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Abdallah Safi" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dialog_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py311"]
